# pkgview

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml  release-please.yml  test.yml
packaging/homebrew/: pkgview.rb.template
src/pkgview/: __init__.py  cli.py  logging_config.py  models.py
src/pkgview/detectors/: __init__.py  apk.py  apt.py  asdf.py  base.py  brew.py  cargo.py  choco.py  composer.py  conda.py  dnf.py  flatpak.py  gem.py  macos_apps.py  mamba.py  manual.py  nix.py  npm.py  nvm.py  pacman.py  pip.py  pyenv.py  scoop.py  snap.py  winget.py
src/pkgview/output/: json_out.py  table.py
tests/: conftest.py  test_cli.py  test_detectors.py  test_models.py  test_output.py
