[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pkgview"
version = "0.2.0"
description = "CLI tool to list all installed programs and their package manager"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Biniam Tessema" }]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.urls]
Repository = "https://github.com/yourname/pkgview"
"Bug Tracker" = "https://github.com/yourname/pkgview/issues"
Changelog = "https://github.com/yourname/pkgview/blob/main/CHANGELOG.md"

[project.scripts]
pkgview = "pkgview.cli:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pkgview"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
