[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pkgview"
version = "0.5.0"
description = "CLI tool to list all installed programs and their package manager"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Biniam Tessema" }]
requires-python = ">=3.9"
keywords = ["cli", "packages", "package-manager", "system", "inventory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.urls]
Repository = "https://github.com/bini93/pgkview"
"Bug Tracker" = "https://github.com/bini93/pgkview/issues"
Changelog = "https://github.com/bini93/pgkview/blob/main/CHANGELOG.md"

[project.scripts]
pkgview = "pkgview.cli:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pkgview"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
